2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp:
	  Added reference to System.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibApr.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  libsvn_client may be linked to libapr-0 or libapr-1, and we need to bind
	  the LibApr class the the same library. Added code that detects the
	  required libapr version and loads it. Fixes bug #325391.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Diff/Diff.mdp, DiffWidget/DiffWidget.mdp,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.mdp,
	  VersionControl.mds: Flush

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Added some new pinvokes.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/SslServerTrustDialog.cs:
	  Call config_ensure when initializing the svn client to make sure all
	  config directories are properly created, and that authentication data
	  can be saved. Handle the case when the user cancels the server
	  certificate validation. Based on a patch by Grzegorz Sobanski. Fixes bug
	  #324640.

2007-10-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Fix formatting.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Error objects returned by authentification handlers must be allocated in